chore: update Nx to latest

--- a/libs/api/account/feature/project.json
+++ b/libs/api/account/feature/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-account-feature",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/api/account/feature/src",
   "projectType": "library",
