--- a/libs/api/transaction/data-access/project.json
+++ b/libs/api/transaction/data-access/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-transaction-data-access",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/api/transaction/data-access/src",
   "projectType": "library",
