--- a/libs/api/webhook/feature/project.json
+++ b/libs/api/webhook/feature/project.json
@@ -1,4 +1,6 @@
 {
+  "name": "api-webhook-feature",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/api/webhook/feature/src",
   "projectType": "library",
   "targets": {
