--- a/libs/sdk/project.json
+++ b/libs/sdk/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "sdk",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/sdk/src",
   "projectType": "library",
