--- a/libs/web/toolbox/ui/project.json
+++ b/libs/web/toolbox/ui/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "web-toolbox-ui",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/web/toolbox/ui/src",
   "projectType": "library",
