--- a/libs/web/ui/link/project.json
+++ b/libs/web/ui/link/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "web-ui-link",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/web/ui/link/src",
   "projectType": "library",
