--- a/libs/web/util/sdk/project.json
+++ b/libs/web/util/sdk/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "web-util-sdk",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/web/util/sdk/src",
   "projectType": "library",
