--- a/apps/sdk-e2e/project.json
+++ b/apps/sdk-e2e/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "sdk-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/sdk-e2e/src",
   "projectType": "application",
