--- a/libs/api/account/data-access/project.json
+++ b/libs/api/account/data-access/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-account-data-access",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/api/account/data-access/src",
   "projectType": "library",
