--- a/libs/api/cluster/feature/project.json
+++ b/libs/api/cluster/feature/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-cluster-feature",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/api/cluster/feature/src",
   "targets": {
