--- a/libs/api/core/feature/project.json
+++ b/libs/api/core/feature/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-core-feature",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/api/core/feature/src",
   "projectType": "library",
