--- a/libs/solana/project.json
+++ b/libs/solana/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "solana",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/solana/src",
   "projectType": "library",
