--- a/libs/web/admin/ui/project.json
+++ b/libs/web/admin/ui/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "web-admin-ui",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/web/admin/ui/src",
   "projectType": "library",
