--- a/libs/web/keypair/data-access/project.json
+++ b/libs/web/keypair/data-access/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "web-keypair-data-access",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/web/keypair/data-access/src",
   "projectType": "library",
