--- a/libs/web/ui/card/project.json
+++ b/libs/web/ui/card/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "web-ui-card",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/web/ui/card/src",
   "projectType": "library",
