--- a/package.json
+++ b/package.json
@@ -146,20 +146,20 @@
     "@graphql-codegen/typescript-urql": "^3.7.2",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.1.6",
-    "@nrwl/cli": "15.0.4",
-    "@nrwl/cypress": "15.0.4",
-    "@nrwl/devkit": "15.0.4",
-    "@nrwl/eslint-plugin-nx": "15.0.4",
-    "@nrwl/jest": "15.0.4",
-    "@nrwl/js": "15.0.4",
-    "@nrwl/linter": "15.0.4",
-    "@nrwl/nest": "15.0.4",
-    "@nrwl/node": "15.0.4",
-    "@nrwl/nx-cloud": "15.0.0",
-    "@nrwl/nx-plugin": "15.0.4",
-    "@nrwl/react": "^15.0.4",
-    "@nrwl/web": "15.0.4",
-    "@nrwl/workspace": "15.0.4",
+    "@nrwl/cli": "15.0.13",
+    "@nrwl/cypress": "15.0.13",
+    "@nrwl/devkit": "15.0.13",
+    "@nrwl/eslint-plugin-nx": "15.0.13",
+    "@nrwl/jest": "15.0.13",
+    "@nrwl/js": "15.0.13",
+    "@nrwl/linter": "15.0.13",
+    "@nrwl/nest": "15.0.13",
+    "@nrwl/node": "15.0.13",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/nx-plugin": "15.0.13",
+    "@nrwl/react": "15.0.13",
+    "@nrwl/web": "15.0.13",
+    "@nrwl/workspace": "15.0.13",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@opentelemetry/api-metrics": "^0.33.0",
     "@swc-node/register": "^1.5.4",
@@ -201,7 +201,7 @@
     "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.20",
-    "nx": "15.0.4",
+    "nx": "15.0.13",
     "prettier": "2.7.1",
     "prisma": "^4.5.0",
     "react-test-renderer": "18.2.0",
