feat: infer WEB_URL from API_URL

--- a/.env.example
+++ b/.env.example
@@ -73,4 +73,6 @@ SOLANA_DEVNET_MINT_KIN_AIRDROP_SECRET_KEY=[24,20,238,188,26,234,120,209,88,63,17
 #SOLANA_MAINNET_RPC_ENDPOINT=mainnet
 SOLANA_MAINNET_ENABLED=false
 # The URL of the Web UI, used to redirect to the Web UI after login.
+# In a typical deployment, this is the same as the API_URL with the '/api' suffix removed (the default).
+# This means you will probably only need to set this if you are running a local development setup.
 WEB_URL=http://localhost:4200
