feat: infer bypassing CORS from lack of CORS_ORIGINS values

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# The URL of the API server
+# The URL of the API server (required)
 API_URL=http://localhost:3000/api
 # Enable or disable authentication with username and password.
 # This is recommended to be disabled in production and use an external provider.
@@ -14,11 +14,10 @@ AUTH_USERS="alice|Kinetic@alice1|Admin|alice@email.com|http://avatars.dicebear.c
 APP_1_FEE_PAYER_BYTE_ARRAY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
 APP_1_NAME="App 1"
 #APP_1_LOGO_URL=""
-COOKIE_DOMAINS="localhost,local.kinetic.host,pages.dev"
+#COOKIE_DOMAINS="localhost,local.kinetic.host,pages.dev"
 #COOKIE_NAME="__session"
-# You can bypass CORS checks by setting this to true.
-CORS_BYPASS=true
 # If you want to configure CORS, define a comma-separated list of urls here.
+# If you don't provide any domains, CORS will be bypassed (default).
 #CORS_ORIGINS=http://localhost:4200
 #METRICS_ENABLED=true
 #METRICS_ENDPOINT_ENABLED=true
@@ -45,6 +44,7 @@ DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
 #GOOGLE_CLIENT_ID=x
 #GOOGLE_CLIENT_SECRET=x
 #GOOGLE_ENABLED=false
+# Secret used to sign JWT tokens (required)
 JWT_SECRET="KineticJwtSecret!"
 # Configure the host where the API listens on.
 # Use 127.0.0.1 if you only want to allow connections from localhost.
