--- a/package.json
+++ b/package.json
@@ -162,6 +162,8 @@
     "@nrwl/workspace": "15.0.4",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@opentelemetry/api-metrics": "^0.33.0",
+    "@saas-ui/app-shell": "^1.0.0",
+    "@saas-ui/sidebar": "^0.5.0",
     "@swc-node/register": "^1.5.4",
     "@swc/core": "^1.3.11",
     "@swc/helpers": "^0.4.12",
