feat: use Keypair.fromSecret() for any secrets used in the API

--- a/.github/workflows/test-web-e2e.yml
+++ b/.github/workflows/test-web-e2e.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   API_URL: 'http://localhost:3000'
-  APP_1_FEE_PAYER_BYTE_ARRAY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
+  APP_1_FEE_PAYER_SECRET: 'UvfuF3FPqLyvS8xGjSu4AUfdsY5QvLdnin8SKBLAi3UqgbmEWCDshPY3UcxvBgRAqHLzh5Ni1eypLVZArsis6FF'
   APP_1_NAME: 'App 1'
   AUTH_USERS: 'alice|Kinetic@alice1|Admin,bob|Kinetic@bob1'
   AUTH_PASSWORD_ENABLED: true
@@ -19,7 +19,7 @@ env:
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
   SOLANA_DEVNET_RPC_ENDPOINT: 'http://localhost:8899'
   SOLANA_DEVNET_MINT_KIN: '*MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek,5,Kin'
-  SOLANA_DEVNET_MINT_KIN_AIRDROP_SECRET_KEY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
+  SOLANA_DEVNET_MINT_KIN_AIRDROP_SECRET: 'UvfuF3FPqLyvS8xGjSu4AUfdsY5QvLdnin8SKBLAi3UqgbmEWCDshPY3UcxvBgRAqHLzh5Ni1eypLVZArsis6FF'
 
 jobs:
   main:
