--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   postgres:
-    image: postgres
+    image: postgres:15-alpine
     ports:
       - '5432:5432'
     environment:
@@ -15,3 +15,9 @@ services:
     ports:
       - '8899:8899'
       - '8900:8900'
+  redis:
+    image: redis:7-alpine
+    ports:
+      - '6379:6379'
+    volumes:
+      - ./tmp/redis:/data
