--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:sdk": "nodemon --watch ./api-swagger.json -x 'yarn build:sdk'",
     "dev:services": "docker compose up",
     "dev:services:postgres": "docker compose up postgres",
+    "dev:services:redis": "docker compose up redis",
     "dev:services:solana": "docker compose up solana",
     "dev:web": "nx serve web",
     "dev:web-sdk": "yarn build:web-sdk --watch",
@@ -53,6 +54,7 @@
     "@heroicons/react": "^2.0.12",
     "@nestjs/apollo": "^10.1.4",
     "@nestjs/axios": "^0.1.0",
+    "@nestjs/bull": "^0.6.2",
     "@nestjs/common": "9.1.6",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "9.1.6",
@@ -85,6 +87,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.1.0",
     "bignumber": "^1.1.0",
+    "bull": "^4.10.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "color": "^4.2.3",
@@ -170,6 +173,7 @@
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
+    "@types/bull": "^4.10.0",
     "@types/color": "^3.0.3",
     "@types/create-hmac": "^1.1.0",
     "@types/cron": "^2.0.0",
