--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,9 @@ HOST=127.0.0.1
 #LOG_JSON=false
 # ALL = 0, SILLY = 0, FINE = 1, VERBOSE = 1, DEBUG = 2, INFO = 3, LOG = 3, WARN = 4, ERROR = 5, FATAL = 6, OFF = 7
 LOG_LEVEL=ALL
+# Redis configuration. The port is optional and defaults to 6379
+REDIS_HOST=localhost
+#REDIS_PORT=6379
 # SolanaLocal
 SOLANA_LOCAL_ENABLED=true
 #SOLANA_LOCAL_MINT_KIN=*MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek,5,Kin
