--- a/.github/workflows/test-sdk-e2e.yml
+++ b/.github/workflows/test-sdk-e2e.yml
@@ -17,6 +17,7 @@ env:
   DATABASE_URL: 'postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic'
   JWT_SECRET: 'KineticJwtSecret!'
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
+  REDIS_HOST: 'localhost'
   SOLANA_LOCAL_ENABLED: true
   SOLANA_LOCAL_MINT_KIN: '*MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek,5,Kin'
   SOLANA_LOCAL_MINT_KIN_AIRDROP_SECRET: 'UvfuF3FPqLyvS8xGjSu4AUfdsY5QvLdnin8SKBLAi3UqgbmEWCDshPY3UcxvBgRAqHLzh5Ni1eypLVZArsis6FF'
@@ -30,13 +31,17 @@ jobs:
     if: ${{ github.event_name != 'pull_request' }}
     services:
       postgres:
-        image: postgres:12
+        image: postgres:15-alpine
         env:
           POSTGRES_DB: prisma
           POSTGRES_USER: prisma
           POSTGRES_PASSWORD: prisma
         ports: ['5432:5432']
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+      redis:
+        image: redis:7-alpine
+        ports: ['6379:6379']
+        options: --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
       solana:
         image: ghcr.io/kin-labs/kinetic-solana-network:latest
         ports: ['8899:8899', '8900:8900']
@@ -60,13 +65,17 @@ jobs:
     if: ${{ github.event_name == 'pull_request' }}
     services:
       postgres:
-        image: postgres:12
+        image: postgres:15-alpine
         env:
           POSTGRES_DB: prisma
           POSTGRES_USER: prisma
           POSTGRES_PASSWORD: prisma
         ports: ['5432:5432']
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+      redis:
+        image: redis:7-alpine
+        ports: ['6379:6379']
+        options: --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
       solana:
         image: ghcr.io/kin-labs/kinetic-solana-network:latest
         ports: ['8899:8899', '8900:8900']
