fix: Add username and password options for redis

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,8 @@ QUEUE_CLOSE_ACCOUNT_START=false
 # Redis configuration. The port is optional and defaults to 6379
 REDIS_HOST=localhost
 #REDIS_PORT=6379
+#REDIS_USERNAME=test_user
+#REDIS_PASSWORD=my_password
 # SolanaLocal
 SOLANA_LOCAL_ENABLED=true
 #SOLANA_LOCAL_MINT_KIN=*MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek,5,Kin
