--- a/.github/workflows/affected-build.yml
+++ b/.github/workflows/affected-build.yml
@@ -39,6 +39,7 @@ jobs:
         name: Checkout pr
         with:
           ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
           fetch-depth: 0
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
         uses: nrwl/nx-set-shas@v2
