--- a/.github/workflows/affected-build.yml
+++ b/.github/workflows/affected-build.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v2
         name: Checkout pr
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: ${{ github.event.pull_request.head.repo.full_name }}
           fetch-depth: 0
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
         uses: nrwl/nx-set-shas@v2
