--- a/package.json
+++ b/package.json
@@ -176,7 +176,10 @@
     "@types/jest": "28.1.8",
     "@types/node": "18.11.7",
     "@types/node-fetch": "^2.6.2",
+    "@types/passport-discord": "^0.1.6",
     "@types/passport-github": "^1.1.7",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-jwt": "^3.0.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@types/react-router-dom": "5.3.3",
