--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "bcrypt": "^5.1.0",
     "bignumber": "^1.1.0",
     "bull": "^4.10.2",
+    "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "color": "^4.2.3",
@@ -123,6 +125,7 @@
     "react-router-dom": "6.4.1",
     "react-timeago": "^7.1.0",
     "redirect-ssl": "^3.0.0",
+    "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.10",
     "request-ip": "^3.3.0",
