refactor: switch Redis configuration to REDIS_URL

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ APP_1_NAME="App 1"
 #METRICS_ENABLED=true
 #METRICS_ENDPOINT_ENABLED=true
 #METRICS_PORT=9001
+# Database configuration
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
 # Get a Discord oAuth client ID and secret from
 # https://discord.com/developers/applications
@@ -62,11 +63,8 @@ LOG_LEVEL=ALL
 # Queue settings
 QUEUE_CLOSE_ACCOUNT_CONCURRENCY=1
 QUEUE_CLOSE_ACCOUNT_START=false
-# Redis configuration. The port is optional and defaults to 6379
-REDIS_HOST=localhost
-#REDIS_PORT=6379
-#REDIS_USERNAME=test_user
-#REDIS_PASSWORD=my_password
+# Redis configuration
+REDIS_URL=redis://localhost:6379
 # SolanaLocal
 SOLANA_LOCAL_ENABLED=true
 #SOLANA_LOCAL_MINT_KIN=*MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek,5,Kin
