--- a/.github/workflows/test-sdk-e2e.yml
+++ b/.github/workflows/test-sdk-e2e.yml
@@ -17,7 +17,7 @@ env:
   DATABASE_URL: 'postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic'
   JWT_SECRET: 'KineticJwtSecret!'
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
-  REDIS_HOST: 'localhost'
+  REDIS_URL: 'redis://localhost:6379'
   SOLANA_LOCAL_ENABLED: true
   SOLANA_LOCAL_MINT_KIN: '*MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek,5,Kin'
   SOLANA_LOCAL_MINT_KIN_AIRDROP_SECRET: 'UvfuF3FPqLyvS8xGjSu4AUfdsY5QvLdnin8SKBLAi3UqgbmEWCDshPY3UcxvBgRAqHLzh5Ni1eypLVZArsis6FF'
