--- a/.github/workflows/test-api-e2e.yml
+++ b/.github/workflows/test-api-e2e.yml
@@ -17,7 +17,7 @@ env:
   DATABASE_URL: 'postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic'
   JWT_SECRET: 'KineticJwtSecret!'
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
-  REDIS_HOST: 'localhost'
+  REDIS_URL: 'redis://localhost:6379'
   SOLANA_LOCAL_ENABLED: true
   SOLANA_LOCAL_RPC_ENDPOINT: 'http://127.0.0.1:8899'
   SOLANA_LOCAL_MINT_KIN: '*MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek,5,Kin'
