--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@chakra-ui/theme-tools": "^2.0.12",
     "@choc-ui/chakra-autocomplete": "^5.1.2",
     "@choc-ui/paginator": "^3.4.0",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "@heroicons/react": "^2.0.12",
     "@nestjs/apollo": "^10.1.4",
     "@nestjs/axios": "^0.1.0",
@@ -122,7 +122,7 @@
     "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
     "react-icons": "^4.6.0",
-    "react-router-dom": "6.4.1",
+    "react-router-dom": "6.4.3",
     "react-timeago": "^7.1.0",
     "redirect-ssl": "^3.0.0",
     "redis": "^4.5.1",
@@ -141,6 +141,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "7.19.4",
+    "@babel/preset-react": "^7.14.5",
     "@cypress/code-coverage": "^3.10.0",
     "@golevelup/nestjs-modules": "^0.6.1",
     "@graphql-codegen/add": "^3.2.1",
@@ -153,24 +154,26 @@
     "@graphql-codegen/typescript-urql": "^3.7.2",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.1.6",
-    "@nrwl/cli": "15.0.4",
-    "@nrwl/cypress": "15.0.4",
-    "@nrwl/devkit": "15.0.4",
-    "@nrwl/eslint-plugin-nx": "15.0.4",
-    "@nrwl/jest": "15.0.4",
-    "@nrwl/js": "15.0.4",
-    "@nrwl/linter": "15.0.4",
-    "@nrwl/nest": "15.0.4",
-    "@nrwl/node": "15.0.4",
-    "@nrwl/nx-cloud": "15.0.0",
-    "@nrwl/nx-plugin": "15.0.4",
-    "@nrwl/react": "^15.0.4",
-    "@nrwl/web": "15.0.4",
-    "@nrwl/workspace": "15.0.4",
+    "@nrwl/cli": "15.3.3",
+    "@nrwl/cypress": "15.3.3",
+    "@nrwl/devkit": "15.3.3",
+    "@nrwl/eslint-plugin-nx": "15.3.3",
+    "@nrwl/jest": "15.3.3",
+    "@nrwl/js": "15.3.3",
+    "@nrwl/linter": "15.3.3",
+    "@nrwl/nest": "15.3.3",
+    "@nrwl/node": "15.3.3",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/nx-plugin": "15.3.3",
+    "@nrwl/react": "15.3.3",
+    "@nrwl/web": "15.3.3",
+    "@nrwl/workspace": "15.3.3",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@opentelemetry/api-metrics": "^0.33.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@saas-ui/app-shell": "^1.0.0",
     "@saas-ui/sidebar": "^0.5.0",
+    "@svgr/webpack": "^6.1.2",
     "@swc-node/register": "^1.5.4",
     "@swc/core": "^1.3.11",
     "@swc/helpers": "^0.4.12",
@@ -182,14 +185,14 @@
     "@types/create-hmac": "^1.1.0",
     "@types/cron": "^2.0.0",
     "@types/jest": "28.1.8",
-    "@types/node": "18.11.7",
+    "@types/node": "18.11.9",
     "@types/node-fetch": "^2.6.2",
     "@types/passport-discord": "^0.1.6",
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.7",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
     "@types/request-ip": "^0.0.37",
     "@types/supertest": "^2.0.12",
@@ -199,14 +202,14 @@
     "@typescript-eslint/parser": "5.41.0",
     "babel-jest": "28.1.3",
     "babel-loader": "9.0.0",
-    "css-loader": "^6.7.1",
-    "cypress": "^10.7.0",
+    "css-loader": "^6.4.0",
+    "cypress": "^11.0.0",
     "eslint": "8.26.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "fake-indexeddb": "^4.0.0",
     "husky": "^8.0.1",
@@ -214,17 +217,23 @@
     "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.20",
-    "nx": "15.0.4",
+    "nx": "15.3.3",
     "prettier": "2.7.1",
     "prisma": "^4.5.0",
+    "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
     "stream-browserify": "^3.0.0",
+    "style-loader": "^3.3.0",
+    "stylus": "^0.55.0",
+    "stylus-loader": "^7.1.0",
     "supertest": "6.3.1",
     "ts-jest": "28.0.8",
     "ts-morph": "^16.0.0",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
-    "webpack": "5.74.0"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-merge": "^5.8.0"
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html,graphql}": [
