--- a/package.json
+++ b/package.json
@@ -42,45 +42,45 @@
   },
   "dependencies": {
     "@ajna/pagination": "^1.4.19",
-    "@chakra-ui/icons": "^2.0.11",
-    "@chakra-ui/react": "^2.3.6",
-    "@chakra-ui/styled-system": "^2.3.4",
-    "@chakra-ui/system": "^2.3.0",
-    "@chakra-ui/theme": "^2.1.14",
-    "@chakra-ui/theme-tools": "^2.0.12",
-    "@choc-ui/chakra-autocomplete": "^5.1.2",
+    "@chakra-ui/icons": "^2.0.13",
+    "@chakra-ui/react": "^2.4.3",
+    "@chakra-ui/styled-system": "^2.4.0",
+    "@chakra-ui/system": "^2.3.4",
+    "@chakra-ui/theme": "^2.2.2",
+    "@chakra-ui/theme-tools": "^2.0.14",
+    "@choc-ui/chakra-autocomplete": "^5.1.4",
     "@choc-ui/paginator": "^3.4.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@heroicons/react": "^2.0.12",
-    "@nestjs/apollo": "^10.1.4",
+    "@heroicons/react": "^2.0.13",
+    "@nestjs/apollo": "^10.1.7",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/bull": "^0.6.2",
-    "@nestjs/common": "9.1.6",
+    "@nestjs/common": "9.2.1",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "9.1.6",
-    "@nestjs/graphql": "^10.1.5",
+    "@nestjs/core": "9.2.1",
+    "@nestjs/graphql": "^10.1.7",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "9.1.6",
+    "@nestjs/platform-express": "9.2.1",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/serve-static": "^3.0.0",
-    "@nestjs/swagger": "6.1.3",
+    "@nestjs/swagger": "6.1.4",
     "@ogma/common": "^1.1.0",
-    "@ogma/logger": "^2.4.1",
-    "@ogma/nestjs-module": "^4.2.0",
+    "@ogma/logger": "^2.4.2",
+    "@ogma/nestjs-module": "^4.2.2",
     "@ogma/styler": "^1.0.0",
-    "@opentelemetry/api": "^1.2.0",
-    "@opentelemetry/core": "^1.7.0",
-    "@opentelemetry/exporter-prometheus": "^0.33.0",
-    "@opentelemetry/sdk-node": "^0.33.0",
-    "@prisma/client": "^4.5.0",
-    "@saas-ui/react": "^1.4.5",
+    "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/core": "^1.8.0",
+    "@opentelemetry/exporter-prometheus": "^0.34.0",
+    "@opentelemetry/sdk-node": "^0.34.0",
+    "@prisma/client": "^4.7.1",
+    "@saas-ui/react": "^1.7.3",
     "@scure/bip39": "^1.1.0",
-    "@solana/buffer-layout": "^4.0.0",
+    "@solana/buffer-layout": "4.0.0",
     "@solana/spl-token": "^0.3.6",
     "@solana/web3.js": "1.66.2",
-    "@tabler/icons": "^1.108.0",
+    "@tabler/icons": "^1.117.0",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-table": "^7.7.12",
     "@types/react-timeago": "^4.1.3",
@@ -92,24 +92,24 @@
     "cache-manager": "^4.1.0",
     "cache-manager-redis-store": "2.0.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "color": "^4.2.3",
     "cookie-parser": "^1.4.6",
-    "core-js": "^3.26.0",
+    "core-js": "^3.26.1",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
     "express": "^4.18.2",
     "final-form": "^4.20.7",
     "framer-motion": "^6",
-    "fs-extra": "^10.1.0",
+    "fs-extra": "^11.1.0",
     "graphql": "^16.6.0",
-    "graphql-scalars": "^1.20.0",
+    "graphql-scalars": "^1.20.1",
     "graphql-tag": "^2.12.6",
-    "joi": "^17.6.4",
+    "joi": "^17.7.0",
     "json-bigint-patch": "^0.0.8",
     "lodash": "^4.17.21",
     "micro-ed25519-hdkey": "^0.1.2",
-    "nestjs-otel": "^4.1.0",
+    "nestjs-otel": "^5.0.0",
     "opentelemetry-node-metrics": "^3.0.0",
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
@@ -121,39 +121,39 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
-    "react-icons": "^4.6.0",
-    "react-router-dom": "6.4.3",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "6.4.5",
     "react-timeago": "^7.1.0",
     "redirect-ssl": "^3.0.0",
     "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "^0.13.10",
+    "regenerator-runtime": "^0.13.11",
     "request-ip": "^3.3.0",
-    "rxjs": "^7.5.7",
+    "rxjs": "^7.6.0",
     "slugify": "^1.6.5",
-    "swagger-ui-express": "^4.5.0",
+    "swagger-ui-express": "^4.6.0",
     "ts-md5": "^1.3.1",
-    "tslib": "^2.4.0",
+    "tslib": "^2.4.1",
     "urql": "^3.0.3",
     "util": "^0.12.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "7.19.4",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@cypress/code-coverage": "^3.10.0",
     "@golevelup/nestjs-modules": "^0.6.1",
-    "@graphql-codegen/add": "^3.2.1",
-    "@graphql-codegen/cli": "^2.13.8",
-    "@graphql-codegen/fragment-matcher": "^3.3.1",
-    "@graphql-codegen/introspection": "^2.2.1",
-    "@graphql-codegen/typescript": "^2.8.0",
-    "@graphql-codegen/typescript-document-nodes": "^2.3.5",
-    "@graphql-codegen/typescript-operations": "^2.5.5",
-    "@graphql-codegen/typescript-urql": "^3.7.2",
+    "@graphql-codegen/add": "^3.2.3",
+    "@graphql-codegen/cli": "^2.16.1",
+    "@graphql-codegen/fragment-matcher": "^3.3.3",
+    "@graphql-codegen/introspection": "^2.2.3",
+    "@graphql-codegen/typescript": "^2.8.5",
+    "@graphql-codegen/typescript-document-nodes": "^2.3.10",
+    "@graphql-codegen/typescript-operations": "^2.5.10",
+    "@graphql-codegen/typescript-urql": "^3.7.3",
     "@nestjs/schematics": "9.0.3",
-    "@nestjs/testing": "9.1.6",
+    "@nestjs/testing": "9.2.1",
     "@nrwl/cli": "15.3.3",
     "@nrwl/cypress": "15.3.3",
     "@nrwl/devkit": "15.3.3",
@@ -170,13 +170,13 @@
     "@nrwl/workspace": "15.3.3",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@opentelemetry/api-metrics": "^0.33.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@saas-ui/app-shell": "^1.0.0",
-    "@saas-ui/sidebar": "^0.5.0",
-    "@svgr/webpack": "^6.1.2",
+    "@saas-ui/sidebar": "^0.6.1",
+    "@svgr/webpack": "^6.5.1",
     "@swc-node/register": "^1.5.4",
-    "@swc/core": "^1.3.11",
-    "@swc/helpers": "^0.4.12",
+    "@swc/core": "^1.3.23",
+    "@swc/helpers": "^0.4.14",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
@@ -185,52 +185,52 @@
     "@types/create-hmac": "^1.1.0",
     "@types/cron": "^2.0.0",
     "@types/jest": "28.1.8",
-    "@types/node": "18.11.9",
+    "@types/node": "18.11.15",
     "@types/node-fetch": "^2.6.2",
     "@types/passport-discord": "^0.1.6",
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
-    "@types/passport-jwt": "^3.0.7",
-    "@types/react": "18.0.25",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
     "@types/request-ip": "^0.0.37",
     "@types/supertest": "^2.0.12",
     "@types/text-encoding": "^0.0.36",
     "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "5.41.0",
-    "@typescript-eslint/parser": "5.41.0",
+    "@typescript-eslint/eslint-plugin": "5.46.1",
+    "@typescript-eslint/parser": "5.46.1",
     "babel-jest": "28.1.3",
-    "babel-loader": "9.0.0",
-    "css-loader": "^6.4.0",
-    "cypress": "^11.0.0",
-    "eslint": "8.26.0",
+    "babel-loader": "9.1.0",
+    "css-loader": "^6.7.3",
+    "cypress": "^12.1.0",
+    "eslint": "8.29.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "fake-indexeddb": "^4.0.0",
-    "husky": "^8.0.1",
+    "fake-indexeddb": "^4.0.1",
+    "husky": "^8.0.2",
     "jest": "28.1.3",
     "jest-environment-jsdom": "^29.0.2",
-    "lint-staged": "^13.0.3",
+    "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
     "nx": "15.3.3",
-    "prettier": "2.7.1",
-    "prisma": "^4.5.0",
-    "react-refresh": "^0.10.0",
+    "prettier": "2.8.1",
+    "prisma": "^4.7.1",
+    "react-refresh": "^0.14.0",
     "react-test-renderer": "18.2.0",
     "stream-browserify": "^3.0.0",
-    "style-loader": "^3.3.0",
-    "stylus": "^0.55.0",
+    "style-loader": "^3.3.1",
+    "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
-    "supertest": "6.3.1",
+    "supertest": "6.3.3",
     "ts-jest": "28.0.8",
-    "ts-morph": "^16.0.0",
+    "ts-morph": "^17.0.1",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4",
+    "typescript": "4.9.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-merge": "^5.8.0"
