--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "private": true,
   "resolutions": {
-    "@solana/web3.js": "1.70.1"
+    "@solana/web3.js": "1.73.0"
   },
   "dependencies": {
     "@ajna/pagination": "^1.4.19",
@@ -62,7 +62,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "9.2.1",
     "@nestjs/graphql": "^10.1.7",
-    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "9.2.1",
     "@nestjs/schedule": "^2.1.0",
@@ -76,15 +76,16 @@
     "@opentelemetry/core": "^1.8.0",
     "@opentelemetry/exporter-prometheus": "^0.34.0",
     "@opentelemetry/sdk-node": "^0.34.0",
-    "@prisma/client": "^4.7.1",
+    "@prisma/client": "^4.8.1",
+    "@saas-ui/forms": "1.4.1",
     "@saas-ui/react": "^1.7.3",
     "@scure/bip39": "^1.1.0",
     "@solana/buffer-layout": "4.0.0",
-    "@solana/spl-token": "^0.3.6",
-    "@solana/web3.js": "1.70.1",
-    "@tabler/icons": "^1.117.0",
+    "@solana/spl-token": "^0.3.7",
+    "@solana/web3.js": "1.73.0",
+    "@tabler/icons": "^1.119.0",
     "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/react-table": "^7.7.12",
+    "@types/react-table": "^7.7.14",
     "@types/react-timeago": "^4.1.3",
     "apollo-server-express": "^3.10.3",
     "axios": "^0.27.2",
@@ -97,7 +98,7 @@
     "class-validator": "^0.14.0",
     "color": "^4.2.3",
     "cookie-parser": "^1.4.6",
-    "core-js": "^3.26.1",
+    "core-js": "^3.27.1",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
     "express": "^4.18.2",
@@ -117,21 +118,21 @@
     "passport-discord": "^0.1.4",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
     "react-icons": "^4.7.1",
-    "react-router-dom": "6.4.5",
+    "react-router-dom": "6.6.2",
     "react-timeago": "^7.1.0",
     "redirect-ssl": "^3.0.0",
     "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.11",
     "request-ip": "^3.3.0",
-    "rxjs": "^7.6.0",
+    "rxjs": "^7.8.0",
     "slugify": "^1.6.5",
     "swagger-ui-express": "^4.6.0",
     "ts-md5": "^1.3.1",
@@ -141,43 +142,43 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.20.12",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@cypress/code-coverage": "^3.10.0",
     "@golevelup/nestjs-modules": "^0.6.1",
     "@graphql-codegen/add": "^3.2.3",
-    "@graphql-codegen/cli": "^2.16.1",
+    "@graphql-codegen/cli": "^2.16.4",
     "@graphql-codegen/fragment-matcher": "^3.3.3",
     "@graphql-codegen/introspection": "^2.2.3",
-    "@graphql-codegen/typescript": "^2.8.5",
-    "@graphql-codegen/typescript-document-nodes": "^2.3.10",
-    "@graphql-codegen/typescript-operations": "^2.5.10",
+    "@graphql-codegen/typescript": "^2.8.7",
+    "@graphql-codegen/typescript-document-nodes": "^2.3.12",
+    "@graphql-codegen/typescript-operations": "^2.5.12",
     "@graphql-codegen/typescript-urql": "^3.7.3",
-    "@nestjs/schematics": "9.0.3",
+    "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.2.1",
-    "@nrwl/cli": "15.3.3",
-    "@nrwl/cypress": "15.3.3",
-    "@nrwl/devkit": "15.3.3",
-    "@nrwl/eslint-plugin-nx": "15.3.3",
-    "@nrwl/jest": "15.3.3",
-    "@nrwl/js": "15.3.3",
-    "@nrwl/linter": "15.3.3",
-    "@nrwl/nest": "15.3.3",
-    "@nrwl/node": "15.3.3",
+    "@nrwl/cli": "15.4.5",
+    "@nrwl/cypress": "15.4.5",
+    "@nrwl/devkit": "15.4.5",
+    "@nrwl/eslint-plugin-nx": "15.4.5",
+    "@nrwl/jest": "15.4.5",
+    "@nrwl/js": "15.4.5",
+    "@nrwl/linter": "15.4.5",
+    "@nrwl/nest": "15.4.5",
+    "@nrwl/node": "15.4.5",
     "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/nx-plugin": "15.3.3",
-    "@nrwl/react": "15.3.3",
-    "@nrwl/web": "15.3.3",
-    "@nrwl/workspace": "15.3.3",
+    "@nrwl/nx-plugin": "15.4.5",
+    "@nrwl/react": "15.4.5",
+    "@nrwl/web": "15.4.5",
+    "@nrwl/workspace": "15.4.5",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@opentelemetry/api-metrics": "^0.33.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@saas-ui/app-shell": "^1.0.0",
     "@saas-ui/sidebar": "^0.6.1",
     "@svgr/webpack": "^6.5.1",
-    "@swc-node/register": "^1.5.4",
-    "@swc/core": "^1.3.23",
+    "@swc-node/register": "^1.5.5",
+    "@swc/core": "^1.3.26",
     "@swc/helpers": "^0.4.14",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
@@ -187,42 +188,42 @@
     "@types/create-hmac": "^1.1.0",
     "@types/cron": "^2.0.0",
     "@types/jest": "28.1.8",
-    "@types/node": "18.11.15",
+    "@types/node": "18.11.18",
     "@types/node-fetch": "^2.6.2",
     "@types/passport-discord": "^0.1.6",
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.8",
     "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
+    "@types/react-dom": "18.0.10",
     "@types/react-router-dom": "5.3.3",
     "@types/request-ip": "^0.0.37",
     "@types/supertest": "^2.0.12",
     "@types/text-encoding": "^0.0.36",
     "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "5.46.1",
-    "@typescript-eslint/parser": "5.46.1",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
     "babel-jest": "28.1.3",
-    "babel-loader": "9.1.0",
+    "babel-loader": "9.1.2",
     "css-loader": "^6.7.3",
-    "cypress": "^12.1.0",
-    "eslint": "8.29.0",
-    "eslint-config-prettier": "8.5.0",
+    "cypress": "^12.3.0",
+    "eslint": "8.31.0",
+    "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-jsx-a11y": "6.7.0",
+    "eslint-plugin-react": "7.32.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "fake-indexeddb": "^4.0.1",
-    "husky": "^8.0.2",
+    "husky": "^8.0.3",
     "jest": "28.1.3",
     "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
-    "npm-check-updates": "^16.6.0",
-    "nx": "15.3.3",
-    "prettier": "2.8.1",
-    "prisma": "^4.7.1",
+    "npm-check-updates": "^16.6.2",
+    "nx": "15.4.5",
+    "prettier": "2.8.2",
+    "prisma": "^4.8.1",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "18.2.0",
     "stream-browserify": "^3.0.0",
