chore: scaffold out Kinetic modules

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -36,6 +36,9 @@
       "@kin-kinetic/api/core/feature": ["libs/api/core/feature/src/index.ts"],
       "@kin-kinetic/api/core/util": ["libs/api/core/util/src/index.ts"],
       "@kin-kinetic/api/cron/data-access": ["libs/api/cron/data-access/src/index.ts"],
+      "@kin-kinetic/api/kinetic/data-access": ["libs/api/kinetic/data-access/src/index.ts"],
+      "@kin-kinetic/api/kinetic/feature": ["libs/api/kinetic/feature/src/index.ts"],
+      "@kin-kinetic/api/kinetic/util": ["libs/api/kinetic/util/src/index.ts"],
       "@kin-kinetic/api/queue/data-access": ["libs/api/queue/data-access/src/index.ts"],
       "@kin-kinetic/api/queue/feature": ["libs/api/queue/feature/src/index.ts"],
       "@kin-kinetic/api/solana/data-access": ["libs/api/solana/data-access/src/index.ts"],
