feat: add cache for getTokenAccounts method

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ APP_1_NAME="App 1"
 #APP_1_ENABLE_WEBHOOKS=true
 # Cache configurations, all TTL values are in seconds
 #CACHE_SOLANA_GET_LATEST_BLOCKHASH_TTL=5
+#CACHE_SOLANA_GET_TOKEN_ACCOUNTS_TTL=60
 #COOKIE_DOMAINS="localhost,local.kinetic.host,pages.dev"
 #COOKIE_NAME="__session"
 # If you want to configure CORS, define a comma-separated list of urls here.
